// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test adding custom config 1`] = `
Object {
  "Parameters": Object {
    "AssetParametersa7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeeeArtifactHash7E1A96FC": Object {
      "Description": "Artifact hash for asset \\"a7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeee\\"",
      "Type": "String",
    },
    "AssetParametersa7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeeeS3Bucket0BACA0F3": Object {
      "Description": "S3 bucket for asset \\"a7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeee\\"",
      "Type": "String",
    },
    "AssetParametersa7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeeeS3VersionKey88BCADE3": Object {
      "Description": "S3 key for asset version \\"a7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeee\\"",
      "Type": "String",
    },
    "AssetParametersd8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3ArtifactHash3A828C70": Object {
      "Description": "Artifact hash for asset \\"d8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3\\"",
      "Type": "String",
    },
    "AssetParametersd8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3S3Bucket6ADCD2CE": Object {
      "Description": "S3 bucket for asset \\"d8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3\\"",
      "Type": "String",
    },
    "AssetParametersd8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3S3VersionKeyBFE2A5C6": Object {
      "Description": "S3 key for asset version \\"d8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "TestConfigDFE7B72C": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "nodejs14.x",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersa7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeeeS3Bucket0BACA0F3",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersa7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeeeS3VersionKey88BCADE3",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersa7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeeeS3VersionKey88BCADE3",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "TestConfigPythonLibLayer672F8799": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "python3.8",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersd8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3S3Bucket6ADCD2CE",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3S3VersionKeyBFE2A5C6",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3S3VersionKeyBFE2A5C6",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
  },
}
`;

exports[`visting node lambda runtimes and adding aspects 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters562b22572f5b1c96e642fd6530a7f212a75859278d0a3c37118347ab5e4f652aArtifactHash982626B0": Object {
      "Description": "Artifact hash for asset \\"562b22572f5b1c96e642fd6530a7f212a75859278d0a3c37118347ab5e4f652a\\"",
      "Type": "String",
    },
    "AssetParameters562b22572f5b1c96e642fd6530a7f212a75859278d0a3c37118347ab5e4f652aS3Bucket5025E55C": Object {
      "Description": "S3 bucket for asset \\"562b22572f5b1c96e642fd6530a7f212a75859278d0a3c37118347ab5e4f652a\\"",
      "Type": "String",
    },
    "AssetParameters562b22572f5b1c96e642fd6530a7f212a75859278d0a3c37118347ab5e4f652aS3VersionKey614E5FAD": Object {
      "Description": "S3 key for asset version \\"562b22572f5b1c96e642fd6530a7f212a75859278d0a3c37118347ab5e4f652a\\"",
      "Type": "String",
    },
    "AssetParametersa7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeeeArtifactHash7E1A96FC": Object {
      "Description": "Artifact hash for asset \\"a7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeee\\"",
      "Type": "String",
    },
    "AssetParametersa7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeeeS3Bucket0BACA0F3": Object {
      "Description": "S3 bucket for asset \\"a7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeee\\"",
      "Type": "String",
    },
    "AssetParametersa7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeeeS3VersionKey88BCADE3": Object {
      "Description": "S3 key for asset version \\"a7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeee\\"",
      "Type": "String",
    },
    "AssetParametersd8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3ArtifactHash3A828C70": Object {
      "Description": "Artifact hash for asset \\"d8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3\\"",
      "Type": "String",
    },
    "AssetParametersd8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3S3Bucket6ADCD2CE": Object {
      "Description": "S3 bucket for asset \\"d8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3\\"",
      "Type": "String",
    },
    "AssetParametersd8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3S3VersionKeyBFE2A5C6": Object {
      "Description": "S3 key for asset version \\"d8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "testConfigWithNodeDDA76C99": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "nodejs14.x",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersa7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeeeS3Bucket0BACA0F3",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersa7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeeeS3VersionKey88BCADE3",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersa7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeeeS3VersionKey88BCADE3",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "python3.8",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersd8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3S3Bucket6ADCD2CE",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3S3VersionKeyBFE2A5C6",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3S3VersionKeyBFE2A5C6",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": Object {
      "DependsOn": Array [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters562b22572f5b1c96e642fd6530a7f212a75859278d0a3c37118347ab5e4f652aS3Bucket5025E55C",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters562b22572f5b1c96e642fd6530a7f212a75859278d0a3c37118347ab5e4f652aS3VersionKey614E5FAD",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters562b22572f5b1c96e642fd6530a7f212a75859278d0a3c37118347ab5e4f652aS3VersionKey614E5FAD",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_SDK_USER_AGENT": "{ \\"customUserAgent\\": \\"AwsSolution/undefined/undefined\\" }",
          },
        },
        "Handler": "index.handler",
        "Layers": Array [
          Object {
            "Ref": "testConfigWithNodeDDA76C99",
          },
        ],
        "Role": Object {
          "Fn::GetAtt": Array [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`visting node python runtimes and adding aspects 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters993a3efadb0d38ccd49e129ec9c953993426e0f257bcb696bf7ba410fe4034f9ArtifactHashD6A510A4": Object {
      "Description": "Artifact hash for asset \\"993a3efadb0d38ccd49e129ec9c953993426e0f257bcb696bf7ba410fe4034f9\\"",
      "Type": "String",
    },
    "AssetParameters993a3efadb0d38ccd49e129ec9c953993426e0f257bcb696bf7ba410fe4034f9S3Bucket7D3853F1": Object {
      "Description": "S3 bucket for asset \\"993a3efadb0d38ccd49e129ec9c953993426e0f257bcb696bf7ba410fe4034f9\\"",
      "Type": "String",
    },
    "AssetParameters993a3efadb0d38ccd49e129ec9c953993426e0f257bcb696bf7ba410fe4034f9S3VersionKey8E9FB346": Object {
      "Description": "S3 key for asset version \\"993a3efadb0d38ccd49e129ec9c953993426e0f257bcb696bf7ba410fe4034f9\\"",
      "Type": "String",
    },
    "AssetParametersa7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeeeArtifactHash7E1A96FC": Object {
      "Description": "Artifact hash for asset \\"a7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeee\\"",
      "Type": "String",
    },
    "AssetParametersa7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeeeS3Bucket0BACA0F3": Object {
      "Description": "S3 bucket for asset \\"a7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeee\\"",
      "Type": "String",
    },
    "AssetParametersa7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeeeS3VersionKey88BCADE3": Object {
      "Description": "S3 key for asset version \\"a7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeee\\"",
      "Type": "String",
    },
    "AssetParametersd8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3ArtifactHash3A828C70": Object {
      "Description": "Artifact hash for asset \\"d8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3\\"",
      "Type": "String",
    },
    "AssetParametersd8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3S3Bucket6ADCD2CE": Object {
      "Description": "S3 bucket for asset \\"d8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3\\"",
      "Type": "String",
    },
    "AssetParametersd8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3S3VersionKeyBFE2A5C6": Object {
      "Description": "S3 key for asset version \\"d8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "testConfigWithNodeDDA76C99": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "nodejs14.x",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersa7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeeeS3Bucket0BACA0F3",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersa7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeeeS3VersionKey88BCADE3",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersa7fd33e471aee73db5f46a802639572a716ebc4691e30f037db9615e5422eeeeS3VersionKey88BCADE3",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "python3.8",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersd8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3S3Bucket6ADCD2CE",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3S3VersionKeyBFE2A5C6",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd8876cc7c42a8c1f1336baad719c770a079eefa0a234b4540ffa46a70b397bf3S3VersionKeyBFE2A5C6",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": Object {
      "DependsOn": Array [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters993a3efadb0d38ccd49e129ec9c953993426e0f257bcb696bf7ba410fe4034f9S3Bucket7D3853F1",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters993a3efadb0d38ccd49e129ec9c953993426e0f257bcb696bf7ba410fe4034f9S3VersionKey8E9FB346",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters993a3efadb0d38ccd49e129ec9c953993426e0f257bcb696bf7ba410fe4034f9S3VersionKey8E9FB346",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_SDK_USER_AGENT": "{ \\"user_agent_extra\\": \\"AwsSolution/undefined/undefined\\" }",
          },
        },
        "Handler": "handler",
        "Layers": Array [
          Object {
            "Ref": "testConfigWithNodePythonLibLayer75C81C17",
          },
        ],
        "Role": Object {
          "Fn::GetAtt": Array [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "python3.8",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
